Implemented keyboard_event

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ add_library (ObjSDL
     version.cc version.hh
     event.cc event.hh
     window_event.cc window_event.hh
+    keyboard_event.cc keyboard_event.hh
 )
 
 include (cmake/FindSDL2.cmake)
